--- a/index.html
+++ b/index.html
@@ -45,60 +45,60 @@
         </div>
     </div>
     <div class="label" id="lworks">
-        <h1>works</h1>
+        <h1>featured works</h1>
     </div>
     <div class="sections" id="sworks">
         <div class="item">
-            <img src="./images/works/sugarhiccups0.png" alt="Sugar Hiccups">
+            <img src="./images/works/rr-ems0.jpg" alt="Red Ribbon - Every Moment Sweeter">
             <div class="overlay">
-                <h2>Sugar Hiccups<br><span>web</span></h2>
+                <h2>Red Ribbon - Every Moment Sweeter<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/rr-ems-cbt.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/jenchateau0.jpg" alt="Jen Chateau">
+            <img src="./images/works/patikim0.png" alt="Patikim, Pokie - Contributions">
             <div class="overlay">
-                <h2>Jen Chateau<br><span>Photography</span></h2>
+                <h2>Patikim, Pokie - Contributions<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/patikim-pokie-contributions.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/neptunes0.jpg" alt="Neptune's Milkshakes & Beyond">
+            <img src="./images/works/metrocompre0.jpg" alt="Metro Magazine Compre">
             <div class="overlay">
-                <h2>Neptune's Milkshakes & Beyond<br><span>branding</span></h2>
+                <h2>Metro Magazine Compre<br><span>Editorial Layout</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/metro-magazine-compre.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/ustphotowalk0.jpg" alt="University of Santo Tomas Photowalk">
+            <img src="./images/works/manilazoo0.jpg" alt="Manila Zoo Wayfinding Style Guide">
             <div class="overlay">
-                <h2>University of Santo Tomas Photowalk<br><span>photography</span></h2>
+                <h2>Manila Zoo Wayfinding Style Guide<br><span>Branding</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/manila-zoo-wayfinding.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/freeadlayouts0.jpg" alt="Free Ad Layouts">
+            <img src="./images/works/earthhour0.jpg" alt="Earth Hour Interactive Poster">
             <div class="overlay">
-                <h2>Free Ad Layouts<br><span>editorial layout</span></h2>
+                <h2>Earth Hour Interactive Poster<br><span>Print Design</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/earth-hour-interactive-poster.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
             <img src="./images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
             <div class="overlay">
-                <h2>Bruno Mars Discography<br><span>infographic</span></h2>
+                <h2>Bruno Mars Discography<br><span>Infographic</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/bruno-mars-discography.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
